# TicketAnalysis

./: .gitignore  README.md  app.py  config.py  data_processor.py  database.py  pyproject.toml  replit.md  requirements.txt  sample_data.csv  visualizations.py
attached_assets/: Pasted-Error-saving-to-database-psycopg2-errors-InvalidDatetimeFormat-invalid-input-syntax-for-type-time-1752656646514_1752656646515.txt
